# retail-agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: integration-tests.yml  promote-images.yml  publish-images.yml  unit-tests.yml
data/suites/: problem_suite_v3.json  problem_suite_v3_.json
docker/: README.md
docker/evaluate/: Dockerfile  pyproject.toml
docker/proxy/: Dockerfile  model_pairs.json  nginx.conf.template  validate_model.js
docker/search-server/: Dockerfile  requirements.txt
docker/validator/: pyproject.toml
docs/: miner-guide.md  validator-guide.md
retailbench/: __init__.py  output_split.py  sandbox.py  test_runner.py
src/agent/: agent.py  agent_interface.py  agent_ps.py  agent_test.py  problem_scorer.py  proxy_client.py  reasoning_scorer.py  run_sandbox.py  sandbox_executor.py  sandbox_status.py  scoring.py  types.py
subnet/: sandbox.py  test_runner.py
subnet/tests/: test_reasoning_scorer.py  test_sandbox.py
subnet/validator/: main.py  output_split.py  progress_reporter.py  reasoning_judge.py
tests/: __init__.py  test_model_pairs.py  test_output_split.py  test_problem_scorer.py  test_retailbench_sandbox.py  test_sandbox_envelope.py
tests/integration/: README.md  __init__.py  conftest.py
