[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "retailbench-local"
version = "0.0.0"
description = "RetailBench local agent harness, scoring, and search tooling."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "retailbench*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "retailbench", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
