[project]
name = "retailbench-evaluate"
version = "0.0.0"
description = "RetailBench local evaluate image dependencies (no chain stack)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "requests==2.33.0",
    "sentence-transformers==5.3.0",
    "torch>=2.11.0,<3",
    "ujson==5.12.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
